@@ -2,19 +2,18 @@ package com.demo.springtddtests.service;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.mockito.ArgumentMatchers.any;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import com.demo.springtddtests.model.Project;
 import com.demo.springtddtests.model.exception.ResourceNotFoundException;
 import com.demo.springtddtests.repository.ProjectRepository;
@@ -42,34 +41,57 @@ public class ProjectServiceTest {
   
   @Test
   public void getProjects_ShouldReturnProjectList() throws Exception {
+    // given
     Mockito.when(projectRepository.findAll()).thenReturn(projects);
-    
+
+    // when
     List<Project> result = projectService.getAllProjects();
-   
+
+    // then
     assertNotNull(result);
     assertEquals(2, result.size());
   }
-  
+
   @Test
-  public void getProjectByName_returnOneProject() throws Exception {
-    Long id = new Long(1);
+  @DisplayName("call getProjectById() nothing found, should throw ResourceNotFoundException.")
+  public void getProjectById_NothingFoundShould_ThrowException() {
+    // given
+    Mockito.when(projectRepository.findById(any())).thenReturn(Optional.empty());
+
+    // when
+    Throwable exception = Assertions.assertThrows(ResourceNotFoundException.class, () -> {
+      projectService.getProjectById(Long.valueOf(10000));
+    });
+
+    // then
+    assertNotNull(exception);
+  }
+
+  @Test
+  public void getProjectByName_returnOneProject() {
+    Long id = Long.valueOf(10000);
     Project testProject = projects.get(0);
-    
+
+    // given
     Mockito.when(projectRepository.findById(id)).thenReturn(Optional.ofNullable(testProject));
-    
+
+    // when
     Project result = projectService.getProjectById(id);
-    
+
+    // then
     assertNotNull(result);
     assertEquals(testProject.getId(), result.getId());
     assertEquals(testProject.getName(), result.getName());
   }
   
   @Test(expected = ResourceNotFoundException.class)
-  public void getProject_notFound() throws Exception {
-    Long id = new Long(10000);
-    
+  public void getProject_notFound() {
+    Long id = Long.valueOf(10000);
+
+    // given
     Mockito.when(projectRepository.findById(id)).thenThrow(new ResourceNotFoundException(""));
-    
+
+    // when
     projectService.getProjectById(id);
   }
 }
